--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,24 @@
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
 /node_modules
+/.pnp
+.pnp.js
+
+# testing
+/coverage
 /PROOF
 
-node_modules
-.env
+# production
+/build
 
-#Hardhat files
-cache
-artifacts
-hardhat.config.js
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
