--- a/package.json
+++ b/package.json
@@ -1,32 +1,35 @@
 {
-  "name": "wave-portal",
-  "version": "1.0.0",
-  "description": "send waves through ETH",
-  "main": "index.js",
+  "name": "creap",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
+    "ethers": "^5.4.4",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-scripts": "3.2.0"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
   },
-  "author": "Angel Gomez",
-  "license": "MIT",
-  "devDependencies": {
-    "@nomiclabs/hardhat-ethers": "^2.0.2",
-    "@nomiclabs/hardhat-waffle": "^2.0.1",
-    "chai": "^4.3.4",
-    "ethereum-waffle": "^3.4.0",
-    "ethers": "^5.4.6",
-    "hardhat": "^2.6.4"
+  "eslintConfig": {
+    "extends": "react-app"
   },
-  "dependencies": {},
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/angeljgomezc/wave-portal.git"
-  },
-  "keywords": [
-    "solidity",
-    "example"
-  ],
-  "bugs": {
-    "url": "https://github.com/angeljgomezc/wave-portal/issues"
-  },
-  "homepage": "https://github.com/angeljgomezc/wave-portal#readme"
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
